Fix alignment

--- a/src/components/Icon/index.css
+++ b/src/components/Icon/index.css
@@ -2,6 +2,7 @@
   display: inline-block;
   width: var(--icon-size);
   height: var(--icon-size);
+  vertical-align: middle;
 }
 
 .Icon svg {
